--- a/LiteTube/Controls/NavigationPanel.xaml
+++ b/LiteTube/Controls/NavigationPanel.xaml
@@ -58,6 +58,7 @@
             <TextBlock Text="&#xe11a;" 
                        FontFamily="Segoe UI Symbol"
                        Foreground="{StaticResource NavigationPanelForegroundBrush}"
+                       FontWeight="ExtraLight"
                        FontSize="27"
                        Margin="-2,0,0,0"/>
         </Button>
